获取用户信息写入到数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8088
 github.client.id=c003c1c22811d5046aa0
 github.client.secret=3d828395578d2c954315951c0f96f7fc775072fe
 github.redirect.url=http://localhost:8088/callback
+
+spring.datasource.url=jdbc:h2:file:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
